// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeployErrorDialog - ModuleIsNotAdded > should render without crashing 1`] = `
{
  "body": <Styled(p)>
    The app’s main file 
    <code>
      module
    </code>
     has not been pushed to GitHub. Please add it to continue.
  </Styled(p)>,
  "title": "Unable to deploy",
}
`;

exports[`DeployErrorDialog - ModuleIsNotAdded should render without crashing 1`] = `
Object {
  "body": <StyledParagraph>
    The app’s main file 
    <code>
      module
    </code>
     has not been pushed to GitHub. Please add it to continue.
  </StyledParagraph>,
  "title": "Unable to deploy",
}
`;
